--- a/app/scss/blocks/auth.scss
+++ b/app/scss/blocks/auth.scss
@@ -8,9 +8,10 @@
 
 .auth {
   @include centered();
-  overflow: hidden;
   border-radius: 10px;
   width: 380px;
+  height: 100%;
+  perspective: 600px;
   .user {
     text-align: center;
     position: static;
@@ -24,6 +25,24 @@
       line-height: 24px;
     }
   }
+}
+
+.auth__side{
+  @include centered();
+  overflow: hidden;
+  border-radius: 10px;
+  width: 100%;
+  transform-style: preserve-3d;
+  transition: all 1s ease-in-out;
+}
+
+.auth__side-back{
+  backface-visibility: hidden;
+  position: absolute;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  transform: rotateY(180deg);
 }
 
 .auth__info {
@@ -59,6 +78,12 @@
   flex: 1;
   border: 1px solid #6fd1c6;
   transition: all 0.3s ease-in-out;
+  &:first-child{
+    border-radius: 0 0 0 10px;
+  }
+  &:last-child{
+    border-radius: 0 0 10px 0;
+  }
   &:hover{
     background-color: #009688;
   }
