--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -27,19 +27,21 @@ block content
           img(src="./img/parallax-mount/Layer1-1.png" class="parallax-mount__image")
 
     .auth
-      .auth__info
-        .user
-          .user__photo
-            img(src="img/my.jpg", alt="").user__avatar
-          .user__name Yuriy Bochkarev
-          .user__title My Site Portfolio
-          .auth__socals
-            each icon in ['github', 'upwork_round']
-              a.auth__socals--link
-                +image-svg('auth__socials--image auth__socials--' + icon,icon,"0 0 30 30")
-      .auth__btns
-        a(href="works.html").auth__btn My last Works
-        a(href="about.html").auth__btn About Me
-        button.auth__btn.change__btn Change Theme
+      .auth__side
+        .auth__info
+          .user
+            .user__photo
+              img(src="img/my.jpg", alt="").user__avatar
+            .user__name Yuriy Bochkarev
+            .user__title My Site Portfolio
+            .auth__socals
+              each icon in ['github', 'upwork_round']
+                a.auth__socals--link
+                  +image-svg('auth__socials--image auth__socials--' + icon,icon,"0 0 30 30")
+        .auth__btns
+          a(href="works.html").auth__btn My last Works
+          a(href="about.html").auth__btn About Me
+          button.auth__btn.change__btn Change Theme
+      .auth__side-back
     .auth__login
       button.auth__login--link  Authorizations
