--- a/app/pug/sections/footer.pug
+++ b/app/pug/sections/footer.pug
@@ -5,7 +5,7 @@ footer.footer
       - var menuLink = ["index", "about" , "works"]
       - for (var i = 0; i < menuItem.length; i++)
         li.nav-menu__item
-          a(href=`${menuLink[i]}.html`).nav-menu__link= menuItem[i]
+          a(href=`./${menuLink[i]}.html`).nav-menu__link= menuItem[i]
   .footer__socials
     ul.socials__list
       each item in ['github', 'upwork']
