--- a/app/scss/blocks/slideshow.scss
+++ b/app/scss/blocks/slideshow.scss
@@ -4,48 +4,21 @@
   height: 400px;
 }
 
-.slideshow__preloader{
-  position: absolute;
+.slideshow__link{
   display: none;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  margin: auto;
-  background: url("../img/preloader.gif");
-  width: 64px;
-  height: 64px;
+  transition: all .3s linear;
+}
+
+.slideshow__link--active{
+  display: block;
 }
 
 .slideshow__display-pic{
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-}
-
-.slideshow__list{
-  text-align: center;
-}
-
-.slideshow__item{
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-}
-
-.slideshow__link{
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.slideshow__image{
-  max-width: 90%;
-  max-height: 90%;
   position: absolute;
   top: 0;
   left: 0;
