--- a/app/pug/pages/about.pug
+++ b/app/pug/pages/about.pug
@@ -62,6 +62,6 @@ block content
                           .skill
                             svg(viewBox="0 0 100 100" preserveAspectRatio="none" class="skill__circle skill__circle--" + skillTitle)
                               circle.skills__circle-under(cx="50" cy="50" r="40")
-                              circle.skills__circle-above(cx="50" cy="50" r="40")
+                              circle.skills__circle-above(cx="50" cy="50" r="40" data-animation="toDasharray")
                             .skill__name= skillTitle
   include ../sections/footer
