--- a/app/scss/_mixins/mixins.scss
+++ b/app/scss/_mixins/mixins.scss
@@ -16,7 +16,7 @@
 }
 
 @mixin dash($percentage){
-  .skills__circle-above{
+  .skills__circle-above.toDasharray{
     stroke-dasharray: 251/100*$percentage, 251.32;
   }
 }
