--- a/app/scss/blocks/auth.scss
+++ b/app/scss/blocks/auth.scss
@@ -7,10 +7,13 @@
 }
 
 .auth {
-  @include centered();
-  width: 380px;
+  position: relative;
+  width: 100%;
   height: 100%;
   perspective: 600px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   .user {
     text-align: center;
     position: static;
@@ -35,17 +38,14 @@
 }
 
 .auth__card{
-  position: absolute;
-  width: 100%;
-  top: 20%;
-  max-height: 100%;
+  width: 380px;
   border-radius: 10px;
   transform-style: preserve-3d;
   transition: all 1s ease-in-out;
 }
 
 .auth__side--front{
-  position: absolute;
+  @include centered();
   overflow: hidden;
   border-radius: 10px;
   width: 100%;
@@ -54,7 +54,6 @@
 
 .auth__side--back{
   border-radius: 10px;
-  position: absolute;
   overflow: hidden;
   width: 100%;
   transform: rotateY(180deg);
